--- a/APIPost/appsettings.json
+++ b/APIPost/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "APIPostContext": "Server=MSI;Database=APIPost;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
