--- a/APIPost/appsettings.json
+++ b/APIPost/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "APIPostContext": "Server=MSI;Database=APIPost;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PostDbContext": "Host=51.159.27.4;Port=35175;Database=PostDb;Username=ducklingSocial;Password=Epsi2019!"
   }
 }
